chore: sync current project updates
